# tensorx

./: Cargo.toml  README.md
tensorx/: Cargo.toml
tensorx-core/: Cargo.toml
tensorx-core/src/: error.rs  lib.rs  tensor.rs  view.rs
tensorx-core/tests/: matmul.rs  ops.rs
tensorx-gpu/: Cargo.toml
tensorx-gpu/shaders/: matmul.wgsl
tensorx-gpu/src/: context.rs  lib.rs  matmul.rs  tensor_gpu.rs
tensorx-gpu/tests/: matmul.rs
tensorx/src/: lib.rs
tensr-core/src/: view.rs
tensr-gpu/: Cargo.toml
tensr-gpu/src/: matmul.rs  tensor_gpu.rs
tensr-gpu/tests/: matmul.rs
